crates/rome_js_formatter/tests/specs/prettier/js/async-do-expressions/async-do-expressions.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\async-do-expressions\\async-do-expressions.js"
---

# Input

```js
async do {
  1;
};

(async do {});

let x = async do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

async do {
  await 42
}

function iter() {
  return async do {
    return 1;
  }
};

let x = async do {
  let tmp = f();
  tmp * tmp + 1
};
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,30 +1,31 @@
-(async do {
+async;
+do {
   1;
-});
+};
 
-(async do {});
+(async
+do {});
 
-let x = async do {
-  if (foo()) {
-    f();
-  } else if (bar()) {
-    g();
-  } else {
-    h();
-  }
+let x = async;
+do {
+  if (foo()) { f() }
+  else if (bar()) { g() }
+  else { h() }
 };
 
-(async do {
-  await 42;
-});
+async;
+do {
+  await 42
+}
 
 function iter() {
   return async do {
     return 1;
-  };
-}
+  }
+};
 
-let x = async do {
+let x = async;
+do {
   let tmp = f();
-  tmp * tmp + 1;
+  tmp * tmp + 1
 };
```

# Output

```js
async;
do {
  1;
};

(async
do {});

let x = async;
do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

async;
do {
  await 42
}

function iter() {
  return async do {
    return 1;
  }
};

let x = async;
do {
  let tmp = f();
  tmp * tmp + 1
};
```


# Errors
```
async-do-expressions.js:1:7 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ async-do-expressions.js:1:7
    │
  1 │ async do {
    │       ^^
  
  i ...Which is required to end this statement
  
    ┌─ async-do-expressions.js:1:1
    │
  1 │ async do {
    │ ^^^^^^^^
  
async-do-expressions.js:3:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `;`
  
  × unexpected
  
    ┌─ async-do-expressions.js:3:2
    │
  3 │ };
    │  ^
  
async-do-expressions.js:5:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `do`
  
  × unexpected
  
    ┌─ async-do-expressions.js:5:8
    │
  5 │ (async do {});
    │        ^^
  
async-do-expressions.js:5:13 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `)`
  
  × unexpected
  
    ┌─ async-do-expressions.js:5:13
    │
  5 │ (async do {});
    │             ^
  
async-do-expressions.js:7:15 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ async-do-expressions.js:7:15
    │
  7 │ let x = async do {
    │               ^^
  
  i ...Which is required to end this statement
  
    ┌─ async-do-expressions.js:7:1
    │
  7 │ let x = async do {
    │ ^^^^^^^^^^^^^^
  
async-do-expressions.js:11:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `;`
  
  × unexpected
  
     ┌─ async-do-expressions.js:11:2
     │
  11 │ };
     │  ^
  
async-do-expressions.js:13:7 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ async-do-expressions.js:13:7
     │
  13 │ async do {
     │       ^^
  
  i ...Which is required to end this statement
  
     ┌─ async-do-expressions.js:13:1
     │
  13 │ async do {
     │ ^^^^^^^^
  
async-do-expressions.js:17:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `function`
  
  × unexpected
  
     ┌─ async-do-expressions.js:17:1
     │
  17 │ function iter() {
     │ ^^^^^^^^
  
async-do-expressions.js:18:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ async-do-expressions.js:18:16
     │
  18 │   return async do {
     │                ^^
  
  i ...Which is required to end this statement
  
     ┌─ async-do-expressions.js:18:3
     │
  18 │   return async do {
     │   ^^^^^^^^^^^^^^^
  
async-do-expressions.js:21:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `}`
  
  × unexpected
  
     ┌─ async-do-expressions.js:21:1
     │
  21 │ };
     │ ^
  
async-do-expressions.js:21:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `;`
  
  × unexpected
  
     ┌─ async-do-expressions.js:21:2
     │
  21 │ };
     │  ^
  
async-do-expressions.js:23:15 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ async-do-expressions.js:23:15
     │
  23 │ let x = async do {
     │               ^^
  
  i ...Which is required to end this statement
  
     ┌─ async-do-expressions.js:23:1
     │
  23 │ let x = async do {
     │ ^^^^^^^^^^^^^^
  
async-do-expressions.js:26:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `;`
  
  × unexpected
  
     ┌─ async-do-expressions.js:26:2
     │
  26 │ };
     │  ^
  

```


